added organizations database connection and fetch organizations from database. added new app for pushing organizations to database

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ env
 # secrets
 .streamlit/secrets.toml
 
+# database test scripts
+add_test_data.py
+test_database.py
+
 #data files
 Argios.txt
 global_results.txt
