new look with CSS

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,8 @@
 [theme]
-base="dark"
-primaryColor="#5E1CE3"
+base="light"
+primaryColor="#a855f7"
+backgroundColor="#ffffff"
+secondaryBackgroundColor="#f3e8ff"
+textColor="#222222"
+font="sans serif"
+
